--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -1,110 +1,108 @@
 <navbar></navbar>
-<div class="column">
-    <h1 class="center">{{ titulo }}</h1>
-    <div class="m-3 card ">
-        <div class="loading" *ngIf="loading">Loading&#8230;</div>
-        <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
-            <div class="loading" *ngIf="loading">Loading&#8230;</div>
-            <div class="around">
-                <div class="col-md-8 mt-3">
-                    <div class="col-md-4">
-                        <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                        <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                        <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                    </div>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
-                    <select id="tipo_gasto" formControlName="tipo_gasto">
+<h1 class="center">{{ titulo }}</h1>
+<div class="m-3 card ">
+    <div class="loading" *ngIf="loading">Loading&#8230;</div>
+    <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
+        <div class="around">
+            <div class="mt-3 col-md-2">
+                <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                <p #error id="error" *ngIf="submitted && fval.fecha.invalid" class="mt-2">*Este campo no puede ir vacío</p>
+            </div>
+            <br>
+            <div class="mt-3 col-md-3">
+                <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
+                <select id="proyecto" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
+                    <option disabled value=''>Proyecto</option>
+                    <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
+                  </select>
+                <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
+            </div>
+            <div class="mt-3 col-md-3">
+                <label class="control-label" for="monto">Monto Disponible: </label>
+                <input disabled class="form-control-sm " id="monto" value="{{saldoDisp}}" type="text">
+            </div>
+        </div>
+        <div class="mt-3">
+            <label class="control-label " for="monto ">Monto: </label>
+            <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
+        </div>
+        <div class="mt-3 ">
+            <label class="control-label" for="motivo">Motivo: </label>
+            <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
+        </div>
+        <div class="around">
+            <div class="mt-3 col-md-3">
+                <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
+                <select id="tipo_gasto" class="selector" formControlName="tipo_gasto">
                 <option disabled value=''>Tipo gasto</option>
                 <option *ngFor="let gto of tipoGto " >{{gto.gasto}}</option>
               </select>
-                    <p id="error" *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
-                </div>
+                <p id="error" *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
             </div>
-            <div class="mt-3">
-                <label class="control-label " for="monto ">Monto: </label>
-                <input class="form-control " id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
-            </div>
-            <div class="mt-3">
-                <label class="control-label" for="motivo">Motivo: </label>
-                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
-            </div>
-
-            <div class="around">
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
-                    <select id="proyecto" formControlName="proyecto">
-                    <option disabled class="col-md-8 " value=''>Proyecto</option>
-                    <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}}</option>
-                  </select>
-                    <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label mr-2 " for="estatus">Estatus:</label><br>
-                    <select id="estatus" formControlName="estatus">
+            <br>
+            <div class="mt-3 col-md-3">
+                <label class="control-label mr-2" for="estatus">Estatus:</label><br>
+                <select id="estatus" formControlName="estatus">
                     <option disabled value=''>Estatus</option>
                     <option value="Pendiente">Pendiente</option>
                     <option value="Pagado">Pagado</option>
                     <option value="Incompleto">Incompleto</option>
                     <option value="Cancelado">Cancelado</option>
                   </select>
-                    <p id="error" *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="col-md-3 mt-3">
-                    <label class="control-label">Reembolso: </label><br>
-                    <label class="switch">
+                <p id="error" *ngIf="submitted && fval.estatus.invalid">*Este campo no puede ir vacío</p>
+            </div>
+            <div class="mt-3 col-md-3">
+                <label class="control-label">Reembolso: </label><br>
+                <label class="switch">
                     <input type="checkbox" name="check" id="check" formControlName="reembolso">
                     <span class="slider round"></span>
                   </label>
-                </div>
-
             </div>
-            <div *ngIf="!id_gasto" class="mt-5 between">
-                <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
-                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
-                        <h4>Arrastrar archivos</h4>
-                        <img src="../../../assets/img/drop-images.png" alt="drop-images">
-                    </div>
-                    <br>
+        </div>
+        <div *ngIf="!id_gasto" class="mt-5 between">
+            <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
+                <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+                    <h4>Arrastrar archivos</h4>
+                    <img src="../../../assets/img/drop-images.png" alt="drop-images">
                 </div>
                 <br>
-                <div id="tabla">
-                    <table class="table mt-3" *ngIf="archivos.length > 0">
-                        <thead>
-                            <tr>
-                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let archivo of archivos">
-                                <td>{{archivo.nombreArchivo}}
-                                </td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
-                                    </div>
-                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
             </div>
             <br>
-            <div *ngIf="actualizar" class="center mt-3">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
+            <div id="tabla">
+                <table class="table mt-3" *ngIf="archivos.length > 0">
+                    <thead>
+                        <tr>
+                            <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let archivo of archivos">
+                            <td>{{archivo.nombreArchivo}}
+                            </td>
+                            <td>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
+                                </div>
+                                <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <br>
+        <div *ngIf="actualizar" class="center mt-3">
+            <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
                     Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+            <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
-            </div>
+        </div>
 
-            <div class="center mt-3">
-                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3  fas fa-cloud-download-alt"></i>
+        <div class="center mt-3">
+            <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3  fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
-            </div>
-        </form>
-
-    </div>
+        </div>
+    </form>
 
 </div>
