--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -5,27 +5,32 @@
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
         <form class="m-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
             <div class="around">
-                <div class="col-md-8 mt-3">
-                    <div class="col-md-4">
-                        <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                        <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                        <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                    </div>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                    <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+                </div>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
+                    <select id="proyecto" formControlName="proyecto" (change)="valor(reembolsoForm.value.proyecto)">
+                        <option disabled value=''>Proyecto</option>
+                        <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
+                      </select>
+                    <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                     <select id="estatus" formControlName="estatus">
-                        <option *ngIf="nuevoR" value=''>Aprobar</option>
-                        <option value="Aprobado ">Aprobado</option>
-                        <option value="Rechazado ">Rechazado</option>
-                        <option value="Pagado ">Pagado</option>
+                        <option disabled value='Solicitar'>Solicitar</option>
+                        <option *ngIf="!tesorero" value="Aprobado">Aprobado</option>
+                        <option *ngIf="tesorero" value="Pagado">Pagado</option>
                         </select>
                 </div>
             </div>
-            <div class="mt-3 ">
+
+            <div class="mt-3">
                 <label class="control-label " for="monto ">Monto: </label>
-                <input class="form-control " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors
-                        } ">
+                <input class="form-control " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
             </div>
             <div class="mt-3 ">
                 <label class="control-label " for="motivo ">Motivo: </label>
@@ -70,13 +75,11 @@
                 <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
-
             <div class="center mt-3">
                 <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
             </div>
         </form>
-
     </div>
 
 </div>
