--- a/src/app/components/registros/inv-proyectos/inv-proyectos.component.html
+++ b/src/app/components/registros/inv-proyectos/inv-proyectos.component.html
@@ -1,5 +1,5 @@
 <navbar></navbar>
-<h1>Registro {{ titulo }}</h1>
+<h1>{{ titulo }}</h1>
 
 <div class="loading" *ngIf="loading">Loading&#8230;</div>
 <div id="tabla_p">
@@ -19,6 +19,37 @@
                 <td>{{el.monto_d | currency }}</td>
                 <td>{{el.tipo_proyecto}}
                     <p><button type="button" class="btn btn-outline-info btn-sm" (click)="elementoSelected(i)" data-toggle="modal" data-target="#more"> Más Información...</button>
+                        <!-- Modal -->
+                        <div #more id="more" class="modal fade">
+                            <div class="modal-dialog modal-lg">
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th *ngFor="let head of subTh">{{head}}</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>{{el['id_act']}}</td>
+                                                    <td>{{el.proceso}}</td>
+                                                    <td>{{el.empresa}}</td>
+                                                    <td>{{el.resp_cte}}</td>
+                                                    <td>{{el.resp_asg}}</td>
+                                                    <td>{{el.estatus}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                 </td>
                 <td>
                     <button type="button" class="btn btn-outline-success btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
@@ -28,37 +59,5 @@
 
         </tbody>
     </table>
-
-    <!-- Modal -->
-    <div #more id="more" class="modal fade">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th *ngFor="let head of subTh">{{head}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>{{info.id_act}}</td>
-                                <td>{{info.proceso}}</td>
-                                <td>{{info.cliente}}</td>
-                                <td>{{info.resp_cte}}</td>
-                                <td>{{info.resp_asg}}</td>
-                                <td>{{info.estatus}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
 
 </div>
