--- a/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
+++ b/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
@@ -11,11 +11,12 @@
         </thead>
         <tbody>
             <tr *ngFor="let el of elements; let i of index" [ngStyle]="{'color': el.activo ? ' #202C4C': 'red'}">
-                <td class="left"> {{el.ap_p}} {{el.ap_m}} {{el.nombre}}</td>
-                <td class="left">{{el.area}}</td>
-                <td class="left">{{el.resp_asg}}</td>
-                <td class="left">{{el.correo}}</td>
-                <td class="left">{{el.puesto}}</td>
+                <td> {{el.ap_p}} {{el.ap_m}} {{el.nombre}}</td>
+                <td>{{el.rol}}</td>
+                <td>{{el.area}}</td>
+                <td>{{el.resp_asg}}</td>
+                <td>{{el.correo}}</td>
+                <td>{{el.puesto}}</td>
                 <td class="center">
                     <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
                     <button *ngIf='admin' type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
