--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -44,7 +44,7 @@
 }
 
 .acordeon__titulo {
-    background-color: #eee;
+    background-color: rgb(212, 208, 208);
     color: #4E936F;
     font-weight: bold;
     padding: 18px;
@@ -59,7 +59,8 @@
 }
 
 .acordeon__titulo:hover {
-    background-color: #ccc;
+    background-color: rgb(139, 139, 139);
+    color: white;
 }
 
 .btn:hover {
@@ -87,5 +88,49 @@
 }
 
 .navbar {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
+}
+
+.fa-cloudsmith {
+    color: green;
+    margin-right: 7px;
+}
+
+img#usuario {
+    width: 100%;
+    height: 100%;
+}
+
+.circular {
+    /* display: inline-block; */
+    /* position: relative; */
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 50%;
+    /* border: 1px solid #777676; */
+}
+
+input#usuario {
+    background-color: transparent;
+    border-color: transparent;
+    /* border: 1px solid; */
+    font-size: 8px;
+    text-align: center;
+}
+
+.user {
+    /* background-color: turquoise; */
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    /* width: 500px; */
+    margin-left: 10%;
+}
+
+.text {
+    font-size: 12px;
 }
