Cambios funcionalidad y correcciones con servicio security

--- a/src/app/components/altas/gastos-generales/gastos-generales.component.css
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.css
@@ -7,6 +7,7 @@ select {
     box-shadow: transparent;
     background-color: transparent;
     outline: none;
+    width: 100%;
 }
 
 .form-control-sm {
