--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,15 +5,16 @@
             <!-- <a href="javascript:void(0)" id='closebtn' class="closebtn" onclick="closeNav()">&times;</a> -->
             <div class="acordeon">
                 <img id="logo" src="../../../assets/img/logo.png">
-                <div class="acordeon__item">
+                <div *ngIf="!financiero" class="acordeon__item">
                     <input type="radio" name="acordeon" id="item1">
                     <label for="item1" class="acordeon__titulo">REGISTRAR</label>
                     <div class="btn-group-vertical acordeon__contenido">
                         <button *ngIf="admin || aprobador" type="button" class="btn btn-default ml-2" routerLink="/registro-clientes"><i class="fab fa-cloudsmith"></i>Clientes</button>
-                        <button *ngIf="admin || tesorero || aprobador" type="button" class="btn btn-default ml-2" routerLink="/registro-gastos"><i class="fab fa-cloudsmith"></i>Gastos Generales</button >
+                        <button *ngIf="!usuario" type="button" class="btn btn-default ml-2" routerLink="/registro-gastos"><i class="fab fa-cloudsmith"></i>Gastos Generales</button>
                         <button *ngIf="admin || aprobador" type="button" class="btn btn-default ml-2" routerLink="/registro-proyectos"><i class="fab fa-cloudsmith"></i>Proyectos</button>
-                        <button *ngIf="usuario || tesorero" type="button" class="btn btn-default ml-2" routerLink="/registro-reembolso"><i class="fab fa-cloudsmith"></i>Reembolso</button >
-                        <button *ngIf="!usuario" type="button" class="btn btn-default ml-2" routerLink="/registro-usuarios"><i class="fab fa-cloudsmith"></i> Usuarios ASG</button>
+                        <button *ngIf="admin || usuario || tesorero" type="button" class="btn btn-default ml-2" routerLink="/registro-reembolso"><i class="fab fa-cloudsmith"></i>Reembolso</button>
+                        <button *ngIf="admin || aprobador || tesorero" type="button" class="btn btn-default ml-2" routerLink="/registro-usuarios"><i class="fab fa-cloudsmith"></i>Usuarios ASG</button>
+                        <button *ngIf="admin || aprobador " type="button" class="btn btn-default ml-2" routerLink="/registro-nomina"><i class="fab fa-cloudsmith"></i>Nómina</button>
                     </div>
                 </div>
                 <div class="acordeon__item">
@@ -21,7 +22,7 @@
                     <label for="item2" class="acordeon__titulo">GESTIÓN</label>
                     <div class="btn-group-vertical acordeon__contenido">
                         <button *ngIf="admin || aprobador" type="button" class="btn btn-default ml-2" routerLink="/clientes"><i class="fab fa-cloudsmith"></i>Clientes</button>
-                        <button *ngIf="admin || tesorero || aprobador" type="button" class="btn btn-default ml-2" routerLink="/gastos"><i class="fab fa-cloudsmith"></i>Gastos Generales</button >
+                        <button *ngIf="!usuario" type="button" class="btn btn-default ml-2" routerLink="/gastos"><i class="fab fa-cloudsmith"></i>Gastos Generales</button >
                         <button *ngIf="admin || aprobador" type="button" class="btn btn-default ml-2" routerLink="/proyectos"><i class="fab fa-cloudsmith"></i>Proyectos</button>
                         <button type="button" class="btn btn-default ml-2" routerLink="/reembolsos"><i class="fab fa-cloudsmith"></i>Reembolso</button >
                         <button type="button" class="btn btn-default ml-2" routerLink="/usuarios"><i class="fab fa-cloudsmith"></i>Usuarios ASG</button>
@@ -44,7 +45,7 @@
             <img id="usuario" src="{{imagen}}">
         </div>
         <div>
-            <input id="usuario" value=" {{user}}">
+            <input id="usuario" value="{{user}}">
         </div>
     </div>
 
