--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -6,11 +6,6 @@
         <form class="m-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
             <div class="around">
                 <div class="mt-3 col-md-3">
-                    <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                    <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
-                    <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                </div>
-                <div class="mt-3 col-md-3">
                     <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
                     <select id="proyecto" formControlName="proyecto" (change)="valor(reembolsoForm.value.proyecto)">
                         <option disabled value=''>Proyecto</option>
@@ -18,35 +13,49 @@
                       </select>
                     <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
                 </div>
+                <div class="mt-3 col-md-3">
+                    <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                    <input *ngIf="proyecto || id_reembolso" class="form-control-sm" id="fecha" min="proyecto.fechaini" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                    <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+                </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                     <select id="estatus" formControlName="estatus">
                         <option disabled value='Solicitar'>Solicitar</option>
-                        <option *ngIf="!tesorero" value="Aprobado">Aprobado</option>
-                        <option *ngIf="tesorero" value="Pagado">Pagado</option>
+                        <option *ngIf="updateR"  disabled [value]="updateR?.estatus" >{{updateR?.estatus}}</option>
+                        <option *ngIf="aprobador" value='Aprobado'>Aprobado</option>
+                        <option *ngIf="!aprobador" value="Pagado">Pagado</option>
                         </select>
                 </div>
             </div>
-
-            <div class="mt-3">
-                <label class="control-label " for="monto ">Monto: </label>
-                <input class="form-control " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
+            <br>
+            <div class="around">
+                <div class="mt-3 class">
+                    <label class="control-label " for="monto ">Monto: </label><br>
+                    <input class="form-control-sm " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
+                </div>
             </div>
-            <div class="mt-3 ">
-                <label class="control-label " for="motivo ">Motivo: </label>
-                <input class="form-control " id="motivo " placeholder="Motivo " formControlName="motivo" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors
-                        } ">
-            </div>
-            <div *ngIf="!id_reembolso" class="mt-5 between">
-                <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
+            <br>
+            <div class="around">
+                <div class="mt-3 class ">
+                    <label class="control-label " for="motivo ">Motivo: </label><br>
+                    <input class="form-control-sm " id="motivo " placeholder="Motivo " formControlName="motivo" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
+                </div>
+            </div> <br>
+            <label class="class ml-5" *ngIf="!id_reembolso">Subir comprobantes: </label><br>
+            <div *ngIf="!id_reembolso" class="around">
+                <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
                     <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
-                        <h4>Arrastrar archivos</h4>
-                        <img src="../../../assets/img/drop-images.png" alt="drop-images">
+
+                        <div id="filesButton">
+                            <input id="fichero" type="file" accept="image/*; application/pdf;'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';'application/vnd.ms-excel'" (change)="botonFiles($event)">
+                            <label for="fichero" class="circle"></label>
+                        </div>
                     </div>
                     <br>
                 </div>
                 <br>
-                <div id="tabla">
+                <div id="tabla" class=" mt-3 col-md-4">
                     <table class="table mt-3" *ngIf="archivos.length > 0">
                         <thead>
                             <tr>
@@ -54,14 +63,14 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let archivo of archivos">
+                            <tr *ngFor="let archivo of archivos; let i of index">
                                 <td>{{archivo.nombreArchivo}}
                                 </td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
                                     </div>
-                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
+                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivos,archivo)"></i>
                                 </td>
                             </tr>
                         </tbody>
@@ -79,6 +88,7 @@
                 <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
             </div>
+
         </form>
     </div>
 
