--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -1,98 +1,124 @@
 <navbar></navbar>
-<h1>{{ titulo }}</h1>
-<div class="m-3 col-md-10 card ">
-    <div class="loading" *ngIf="loading">Loading&#8230;</div>
-    <div *ngIf="!cambiar">
-        <h3 class="center">Partida</h3>
-        <form [formGroup]="partidaForm" (ngSubmit)="partidaSubmit()">
-            <div class="flex-container">
-                <div>
-                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                    <p #error id="error" *ngIf="submitted && f.fecha.invalid">*Este campo no puede ir vacío</p>
-                    <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
-                </div>
-            </div>
-            <div>
-                <label class="control-label" for="monto">Monto: </label>
-                <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="number" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && f.cantidad.errors }">
-                <br/>
-            </div>
-            <div *ngIf="actualizar" class="center">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="fas fa-times"></i>
-Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="fas fa-sync-alt"></i>
-Actualizar</button>
-            </div>
-            <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-{{boton}}</button>
-        </form>
-    </div>
 
-    <div *ngIf="cambiar">
-        <h3 class="center">Partida</h3>
-        <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
-            <div class="flex-container">
-                <div>
-                    <label class="control-label" for="partida">Saldo disponible: </label><br>
-                    <div class="btn-group">
-                        <input disabled class="form-control col-md-6" id="partida" value="{{saldoDisp}}" type="text">
-                        <button class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" data-tooltip="Si hay un nuevo ingreso o no alcanza el saldo disponible puedes devolverlo y comenzar una nueva partida" type="button" (click)="devolver()">
-                            <i class="fa fa-reply-all" aria-hidden="true"></i>
-                            Devolver </button>
-                    </div>
-                </div>
-                <div>
-                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                    <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                    <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual['fecha']}}">
-                </div>
-            </div>
-            <div>
-                <label class="control-label" for="monto">Monto: </label>
-                <input class="form-control col-md-12" id="monto" placeholder="Monto" formControlName="cantidad" type="number" min="1" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
-                <br/>
-                <label class="control-label" for="descripcion">Motivo: </label>
-                <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
-                <br/>
-            </div>
-            <div *ngIf="!id_of" class="mt-5 between">
-                <div *ngIf="(archivos.length <=  2 )" class="drop-img mt-3 col-md-5">
-                    <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
-                        <h4>Arrastrar archivos</h4>
-                        <img src="../../../assets/img/drop-images.png" alt="drop-images">
+<div class="column">
+    <h1>{{ titulo }}</h1>
+    <div class="m-3 card">
+        <div class="loading" *ngIf="loading">Loading&#8230;</div>
+        <div *ngIf="!cambiar">
+            <h3 class="center">Partida</h3>
+            <form [formGroup]="partidaForm" (ngSubmit)="partidaSubmit()">
+                <div class="flex-container">
+                    <div class=" ml-5 col-md-4">
+                        <div class="mt-3 class">
+                            <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
+                            <p #error id="error" *ngIf="submitted && f.fecha.invalid">*Este campo no puede ir vacío</p>
+                            <input class="form-control-sm" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
+                        </div>
                     </div>
                     <br>
+                    <div class="around">
+                        <div class="mt-3 class">
+                            <label class="control-label" for="monto">Monto: </label>
+                            <input class="form-control-sm" id="monto" placeholder="Monto" formControlName="cantidad" type="number" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && f.cantidad.errors }">
+                            <br/>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="actualizar" class="center mt-3">
+                    <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
+                        Cancelar</button>
+                    <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+                            Actualizar</button>
+                </div>
+                <div class="center mt-3">
+                    <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
+                        {{boton}}</button>
+                </div>
+
+            </form>
+        </div>
+
+        <div *ngIf="cambiar">
+            <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
+                <div class="flex-container">
+                    <div class="around">
+                        <div class="mt-3 col-md-3">
+                            <label class="control-label" for="partida">Saldo disponible: </label><br>
+                            <div class="btn-group">
+                                <input disabled class="form-control-sm col-md-6" id="partida" value="{{saldoDisp | currency}}" type="text">
+                                <button class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" data-tooltip="Si hay un nuevo ingreso o no alcanza el saldo disponible puedes devolverlo y comenzar una nueva partida" type="button" (click)="devolver()">
+                            <i class="fa fa-reply-all" aria-hidden="true"></i>
+                            Devolver </button>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
+                        <br>
+                        <div class="mt-3 col-md-3">
+                            <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
+                            <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
+                            <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual['fecha']}}">
+                        </div>
+                    </div>
                 </div>
                 <br>
-                <div id="tabla">
-                    <table class="table mt-3" *ngIf="archivos.length > 0">
-                        <thead>
-                            <tr>
-                                <th *ngFor="let ht of headTitle"> {{ht}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let archivo of archivos">
-                                <td>{{archivo.nombreArchivo}}
-                                </td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
-                                    </div>
-                                    <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="around">
+                    <div class="mt-3 class">
+                        <label class="control-label" for="monto">Monto: </label>
+                        <input class="form-control" id="monto" placeholder="Monto" formControlName="cantidad" type="number" min="1" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkNumerosP($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
+                        <br/>
+                        <label class="control-label" for="descripcion">Motivo: </label>
+                        <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio" (keyup)="checkCaracteres($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
+                        <br/>
+                    </div>
                 </div>
-            </div>
-            <div *ngIf="actualizar" class="center">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
-                            Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
-                            Actualizar</button>
-            </div>
-            <button *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
-                            {{boton}}</button>
-        </form>
+                <br>
+                <label class="class m-5" *ngIf="!id_of">Subir comprobantes: </label><br>
+                <div *ngIf="!id_of" class="around">
+                    <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
+                        <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento = $event; cargarArchivos();" [ngClass]="{ 'file-over': estaSobreElemento }" class="well drop-zone">
+
+                            <div id="filesButton">
+                                <input id="fichero" type="file" accept="image/*; application/pdf;'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet';'application/vnd.ms-excel'" (change)="botonFiles($event)">
+                                <label for="fichero" class="circle"></label>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
+                    <div *ngIf="!id_of" id="tabla" class=" mt-3 col-md-4">
+                        <table class="table mt-3" *ngIf="archivos.length > 0">
+                            <thead>
+                                <tr>
+                                    <th *ngFor="let ht of headTitle"> {{ht}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let archivo of archivos">
+                                    <td>{{archivo.nombreArchivo}}
+                                    </td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%', 'background-color':  archivo.completo?'green':'blue' }" aria-valuenow="{{ archivo.progreso }}" aria-valuemin="0" aria-valuemax="100">{{archivo.progreso}} </div>
+                                        </div>
+                                        <i class="fas fa-times btn-outline-danger" (click)="limpiarArchivos(archivo)"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <br>
+                <div *ngIf="actualizar" class="center mt-3">
+                    <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
+                    Cancelar</button>
+                    <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+                        Actualizar</button>
+                </div>
+                <div class="center mt-3">
+                    <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
+                    {{boton}}</button>
+                </div>
+            </form>
+        </div>
     </div>
