--- a/src/app/components/altas/usuarios/usuarios.component.css
+++ b/src/app/components/altas/usuarios/usuarios.component.css
@@ -7,6 +7,7 @@ select {
     box-shadow: transparent;
     background-color: transparent;
     outline: none;
+    width: 100%;
 }
 
 h6 {
@@ -35,4 +36,10 @@ div#imagen {
     height: 50px;
     border: 1px, solid;
     border-color: black;
+}
+
+input#vacio {
+    background-color: transparent;
+    border-color: transparent;
+    color: transparent;
 }
