--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -1,33 +1,33 @@
 <navbar></navbar>
 <div class="column">
     <h1 class="center">{{ titulo }}</h1>
-    <div class="m-3 card ">
+    <div class="m-3 card">
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
         <form class="m-3" [formGroup]="userForm" (ngSubmit)="onSubmit()">
             <div class="around">
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="ap_p">Apellido Paterno: </label>
-                    <input class="form-control " id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.ap_p.errors }">
+                    <input class="form-control-sm" id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_p.errors }">
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="ap_m">Apellido Materno: </label>
-                    <input class="form-control " id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.ap_m.errors }">
+                    <input class="form-control-sm" id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.ap_m.errors }">
 
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="nombre">Nombre(s): </label>
-                    <input class="form-control " id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
+                    <input class="form-control-sm" id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.nombre.errors }">
                 </div>
-            </div>
+            </div><br>
             <div class="around">
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="correo">Correo: </label>
-                    <input class="form-control " id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip " title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.correo.errors }">
+                    <input class="form-control-sm" id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip" title="*Campo obligatorio" [ngClass]="{ 'is-invalid': submitted && fval.correo.errors }">
                     <p id="error" class="error" *ngIf="userForm.get('correo').hasError('email')">*Correo Invalido</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="password">Contraseña: </label>
-                    <input class="form-control" minlength="6" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip " title="*Min 6 caracteres " [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
+                    <input class="form-control-sm" minlength="6" (change)="cambio($event)" id="password" placeholder="Contraseña" formControlName="password" type="text" data-toggle="tooltip" title="*Min 6 caracteres" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }">
                 </div>
                 <div *ngIf="admin || aprobador" class="col-md-3 mt-3">
                     <label class="control-label" for="resp_area">Personal a su cargo: </label><br>
@@ -36,48 +36,59 @@
                         <span class="slider round"></span>
                       </label>
                 </div>
-            </div>
+            </div><br>
             <div *ngIf="admin || aprobador" class="around">
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="resp_asg">Jefe Inmediato: </label><br>
-                    <select id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
+                    <select id="resp_asg" formControlName="resp_asg" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
                      <option disabled value=''>Jefe inmediato</option> 
                      <option *ngFor="let resp of usuarios">{{resp.nombre}}</option> 
                      </select>
                     <p id="error" *ngIf="submitted && fval.resp_asg.invalid">*Este campo no puede ir vacío</p>
-                </div>
+                </div><br>
+                <div class="col-md-2 mt-3">
+                    <input type="text" id="vacio" disabled>
+                </div> <br>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="area">Área: </label><br>
-                    <select id="area" formControlName="area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
+                    <select id="area" formControlName="area" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
                         <option disabled value=''>Área</option>
-                        <option *ngFor="let area of areas ">{{area.nombre_area}}</option>
+                        <option *ngFor="let area of areas">{{area.nombre_area}}</option>
                     </select>
                     <p id="error" *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
                 </div>
+
             </div>
+
             <div *ngIf="admin || aprobador" class="around">
-                <div class="col-md-3 mt-3">
+                <div class=" col-md-3 mt-3">
                     <label class="control-label" for="rol">Rol: </label><br>
-                    <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio ">
-                        <option value='' disabled>Rol</option>
-                        <option value="Usuario">USUARIO</option>
+                    <select id="rol" formControlName="rol" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
+                        <option  disabled value=''>Rol</option>
                         <option value="Administrador">ADMINISTRADOR</option>
-                        <option value="Tesorero">TESORERO</option>
                         <option value="Aprobador">APROBADOR</option>
+                        <option value="Financiero">FINANCIERO</option>
+                        <option value="Tesorero">TESORERO</option>
+                        <option value="Usuario">USUARIO</option>
                     </select>
                     <p id="error" *ngIf="submitted && fval.area.invalid">*Este campo no puede ir vacío</p>
                 </div>
+                <br>
+                <div *ngIf="!id_user" class="mt-3 col-md-2"><input type="text" id="vacio" disabled></div>
+                <br>
                 <div class="col-md-3 mt-3">
                     <label class="control-label" for="puesto">Puesto: </label>
-                    <input class="form-control" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkLetras($event) " [ngClass]="{ 'is-invalid': submitted && fval.puesto.errors }">
+                    <input class="form-control-sm" id="puesto" placeholder="Puesto" formControlName="puesto" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid ': submitted &&
+                fval.puesto.errors }">
                 </div>
-                <div *ngIf="admin && activado === false" class="col-md-3 mt-3">
+                <div *ngIf="admin && activado===false" class="col-md-3 mt-3">
                     <label class="control-label" for="activo">Activo: </label><br>
                     <label class="switch">
                         <input type="checkbox" formControlName="activo">
                         <span class="slider round"></span>
                       </label>
                 </div>
+
             </div>
 
             <div *ngIf="sameU" class="col-md-5 mt-3">
@@ -87,22 +98,21 @@
                     <label for="fichero" class="circle"></label>
                 </div>
                 <div>
-                    <input *ngIf="archivos.length >= 1" value="{{imgUser.nombreArchivo}}">
+                    <input *ngIf="archivos.length>= 1" value="{{imgUser.nombreArchivo}}">
                 </div>
             </div>
             <br>
             <div *ngIf="actualizar" class="center">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="  mr-3  fas fa-times"></i>
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class=" mr-3  fas fa-times"></i>
                     Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="  mr-3 fas fa-sync-alt"></i>
+                <button type="submit" id="eliminar" class="btn btn-outline-warning" (click)="asignar()"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
-
-
-            <div class="center ">
-                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class=" mr-3 fas fa-cloud-download-alt"></i>
+            <div class="center">
+                <button #guardar *ngIf="!actualizar" type="submit" id="guardar" class="col-md-5"><i class="mr-3 fas fa-cloud-download-alt"></i>
                     {{boton}}</button>
             </div>
         </form>
     </div>
+    <!-- <app-login></app-login> -->
 </div>
