--- a/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
+++ b/src/app/components/registros/inv-gastos-generales/inv-gastos-generales.component.html
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let el of elements; let i of index">
-                <!-- <td>{{el.resp_asg}}</td> -->
+                <td>{{el.solicitante}}</td>
                 <td>{{el.fecha}}</td>
                 <td style="text-align: right;">{{el.cantidad | currency }}</td>
                 <td>{{el.motivo}}</td>
@@ -24,7 +24,7 @@
                             <!-- Modal content-->
                             <div class="modal-content">
                                 <div class="modal-body" >
-                                       <img class="zoom m-2" *ngFor="let imagen of el.arrComprobantes" [src]="imagen">
+                                       <img class="zoom m-2" *ngFor="let file of el.arrComprobantes" [src]="file" (click)="descargar(file)">
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -37,7 +37,7 @@
 </td>
 <td>
     <button type="button" class="btn btn-outline-success mr-2 btn-sm" (click)="actualizar(i)"><i class="fas fa-edit"></i> Modificar</button>
-    <button type="button" class="btn btn-outline-danger btn-sm" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+    <button *ngIf="usuarioActual.rol==='Administrador' && el.estatus !=='Pagado'" type=" button " class="btn btn-outline-danger btn-sm " (click)="borrar(i) "> <i class="fas fa-trash-alt "></i> Eliminar</button>
 </td>
 </tr>
 
