--- a/src/app/components/registros/inv-oficina/inv-oficina.component.html
+++ b/src/app/components/registros/inv-oficina/inv-oficina.component.html
@@ -20,14 +20,14 @@
                 <td>
                     <button class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_of"> Ver comprobantes ...
                     <div [attr.id]="el.id_of" class="modal fade">
-                        <div class="modal-dialog modal-lg">
-                            <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-body" >
-                                       <img class="zoom m-2" *ngFor="let imagen of el.arrComprobantes" [src]="imagen">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                            <div class="modal-dialog modal-lg">
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-body" >
+                                           <img class="zoom m-2" *ngFor="let file of el.arrComprobantes" [src]="file" (click)="descargar(file)">
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
 </div>
 </div>
 </div>
